set(SRCS compatible.c)
if(NOT HAVE_STRNDUP)
	set(SRCS ${SRCS} strndup.c)
endif()
if(NOT HAVE_GETPROGNAME)
	set(SRCS ${SRCS} getprogname.c)
endif()
if(NOT HAVE_STRCASECMP)
	set(SRCS ${SRCS} strcasecmp.c)
endif()
if(NOT HAVE_STRNCASECMP)
	set(SRCS ${SRCS} strncasecmp.c)
endif()
if(NOT HAVE_MEMPCPY)
	set(SRCS ${SRCS} mempcpy.c)
endif()
if(NOT HAVE_WCWIDTH)
	set(SRCS ${SRCS} wcwidth.c)
endif()
add_library(blktool-compatible ${SRCS})
